--- a/details.Rmd
+++ b/details.Rmd
@@ -40,7 +40,10 @@ The (total) hardness of water is given by the sum of $Ca^{2+}$ and $Mg^{2+}$ ion
 
 For water with total hardness greater than alkalinity, we have the following componence:
 
-- diagram on section 3.2
+```{r, out.width = '30%'}
+knitr::include_graphics("data/diagram.png")
+```
+
 
 For coffee extraction, the alkalinity influences the acid buffer capacity, while the hardness influences the extraction efficiency. 
 
@@ -106,7 +109,7 @@ The ideal water for coffee extraction according to SCAA, 2009:
 
 Collona-Dashwood and Hendon (2014) propose an ideal zone for alkalinity/hardness:
 
-```{r, fig.width=8}
+```{r, out.width = '30%'}
 create_recipe(data, c("Distilled water"), c(1)) %>% 
     filter(Brands != "Distilled water") %>% 
     plot_recipes()
@@ -122,10 +125,6 @@ Higher alkalinity and hardness might still give a high quality extraction. At hi
 
 
 
-```{r, eval=FALSE}
-# fix HTML to include in shiny app
-xml2::write_html(rvest::html_node(xml2::read_html("details.html"), "body"), file = "details_fixed.html")
-```
 
 
 
